fixed bg + removed assets duplicate

--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>The Landmaster</title>
+    <title>Accross The Universe</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
         body {
             margin: 0;
