--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -4,12 +4,47 @@
 <head>
     <title>Accross The Universe</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
     <style>
         body {
             margin: 0;
             padding: 0;
             background-color: #000;
+        }
+
+        ::-webkit-scrollbar {
+            width: 0;
+            background: transparent;
+        }
+
+        ::-webkit-scrollbar-horizontal {
+            height: 0;
+            background: transparent;
+        }
+
+        @font-face {
+            font-family: 'dumbprofont';
+            src: url('assets/fonts/3DumbPro03.ttf') format('truetype');
+        }
+
+        @font-face {
+            font-family: 'jumperfont';
+            src: url('assets/fonts/Jumper.otf') format('opentype');
+        }
+
+        @font-face {
+            font-family: 'chinrgfont';
+            src: url('assets/fonts/chinrg.ttf') format('truetype');
+        }
+
+        @font-face {
+            font-family: 'westcoastfont';
+            src: url('assets/fonts/Westcoast.ttf') format('truetype');
+        }
+
+        @font-face {
+            font-family: 'aidafont';
+            src: url('assets/fonts/AidaGarmoAida.ttf') format('truetype');
         }
     </style>
     <script type="module" src="/src/index.ts"></script>
