--- a/frontend/client/form.html
+++ b/frontend/client/form.html
@@ -5,7 +5,7 @@
             #input-form {
                 position: fixed;
                 padding: 15px;
-                height: 200px;
+                height: 250px;
                 width: 400px;
                 transform: translate(-50%, -50%);
                 background-color: #131521;
@@ -27,11 +27,35 @@
                 font-family: 'aidafont';
                 font-size: 32px;
             }
+            .form-check {
+                transform: translate(-15%, 0);
+                position: relative;
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+                height: 30px;
+                /* align-items: left; */
+                justify-content: left;
+            }
+            .form-check-input {
+                
+            }
+            .form-check-label {
+                color: white;
+                font-size: 20px;
+                font-family: "aidafont";
+                /* border: 1px solid red; */
+                white-space: nowrap;
+            }
         </style>
     </head>
     <body>
         <div id="input-form">
             <div class="title">Authorization</div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input">
+                <label class="form-check-label">existing account</label>
+             </div>
             <input type="text" name="login" placeholder="Login" />
             <input type="text" name="password" placeholder="Password" />
             <input type="submit" name="submit" value="Submit" />
